# thoth-To-Do

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
api/: index.html
commands/: index.html
dev/: index.html
docs/: api.md  api_scripts.py  commands.md  dev.md  index.md
search/: search_index.json
tests/: test_todoparser.py
thoth/: __init__.py  __main__.py  commands.py  file.py  settings.py  todo.py  todoparser.py  util.py  validator.py
